--- a/scss/_inputs.scss
+++ b/scss/_inputs.scss
@@ -42,9 +42,10 @@
         height: 150px;
 
         padding-left: 20px;
+        margin-top: 15px;
         box-sizing: border-box;
 
-                font-size: 17px;
+        font-size: 17px;
         font-weight: 900;
         color: $normal;
 
